2008-10-17  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/chains.h, src/chains.cpp: some changes from
	experimental branch, mainly documentation and some bug fixes.

	* src/formats/atomrecord.cpp: Interpret HG11, HE11, ... as hydrogen
	atoms at position gamma and epsilon. Previously these atom ids were
	interpreted as Hg and He atoms. (Fixes: #2002557 & #2026265)

2008-10-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.cpp: Remove _logbuf[100] (Fixes
	#2022120)

2008-10-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/builder.cpp: fix bugs with linear molecules. (Fixes #2119034 & #2013814)

2008-10-15  Chris Morley

	* src/fingerprint.cpp: correct yesterdays commit which used
	the wrong size to reserve for the fingerprint vector.	
	
2008-10-15  Chris Morley

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	New function for counting the number of molecules in an input file.
	Make option to force output at end more general (for sort).
	
	* include/openbabel/fingerprint.h, src/fingerprint.cpp:
	Add extra parameter to FastSearchIndexer constructor to
	allow vectors to be pre-sized.
	
	* src/formats/fastsearchformat.cpp(ReadChemObject): change the way
	the last result molecule is flagged (for sort).
	(WriteChemObject) Make index updating work with GUI by detecting
	a ofstream object rather than cout.
	Count number of molecules in input file, report it and use it
	to pre-size the fingerprint and seekposition vectors.
	
	* src/formats/smilesformat.cpp(SkipObjects): make compatible with
	previous interpretation changes. (Lines which start with non-SMILES
	character are ignored.)


2008-10-15  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.cpp: Accept both forms for sulfon
	and nitro groups: N(=O)O, N(=O)=O, S(O)O, S(=O)(=O) are now all valid
	and typed correctly.

2008-10-11  Tim Vandermeersch <tim.vandermeersch@gmail.com>
